# cvxball-client

./: .copier-answers.yml  .pre-commit-config.yaml  LICENSE  Makefile  README.md  demo.py  pyproject.toml  requirements.txt
.github/: renovate.json
.github/workflows/: ci.yml  release.yml
notebooks/: cvxball-client.py
src/client/: demo.py
src/tests/: conftest.py
tests/: conftest.py  test_docs.py
