[project]
name = "cvxball-client"
version = "0.1.0"
description = "Client for connecting to cvxball service"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
    {name = "Thomas Schmelzer", email = "thomas.schmelzer@example.com"}
]
dependencies = [
    "numpy-flight==0.0.16",
    "numpy==2.3.4",
    "matplotlib==3.10.7",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
    "pre-commit==4.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/client"]

[tool.pytest.ini_options]
testpaths = ["tests"]

# Deptry dependency checker configuration
[tool.deptry]
# see https://deptry.com/usage/#pep-621-dev-dependency-groups
pep621_dev_dependency_groups = ["dev"]

[tool.deptry.package_module_name_map]
numpy-flight = ["flight"]
